# TFG_Adrian_Fernandez_Casas

./: CMakeLists.txt  README.md  launcher_isaac.sh
rl_package/: expert_data.json  package.xml  setup.py
rl_package/rl_package/: auxiliar.py  entrenamiento.py  one_joint.py  perfil_trapezoidal.py  record_move.py
robot_real/: PelotaDetector.cpp  PelotaDetector.h  acquire-data.cpp  acquire-data.h  calibracion_joint.cpp  cartesianSave.cpp  cartesianSave.h  chessboard.cpp  chessboard.h  clientecam.py  control_cartesiano.cpp  control_impedancia.cpp  deteccion_pelota.cpp  eye-in-hand.cpp  eye-in-hand.h  go_home.cpp  moveJointTrajectory.cpp  moveTrajectory.cpp  puntos_joint.txt  puntos_joint2.txt  saveVideo.cpp  saveVideo_joint.cpp  tracker_eventos_cliente.cpp  trayectorias.txt  trayectorias2.txt  visp-acquire-franka-calib-data.cpp  visual_servoing_apriltag.cpp  visual_servoing_pelota_eventos_cliente.cpp  visual_servoing_pelota_eventos_server.py  visual_servoing_pelota_rgb.cpp  visual_servoing_pelota_yolo.cpp
scripts_simulador/: control_adaptativo.py  control_impedancia.py  visual_servoing.py
